--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,47 @@
-html *
-{
-   color: #000 ;
-   font-family: Arial ;
+:root {
+	--main-bg-color: #f1fffa;
+	--dark-text: #464e47;
+	--light-text: #a4b7a9;
+
+	--light-accent: #ccfccb;
+	--dark-accent: #568259;
+}
+html,
+body {
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	color: var(--dark-text);
+	font-family: Arial;
+	background-color: var(--main-bg-color);
+}
+
+button {
+	all: unset;
+	box-sizing: border-box;
+	border-radius: 0.4em;
+	padding: 0.5em;
+	background-color: var(--dark-text);
+	color: var(--main-bg-color);
+	width: 100%;
+	text-align: center;
+	transition: all 0.1s;
+}
+button:hover {
+	background-color: var(--light-text);
+	color: var(--dark-text);
+}
+
+input {
+	all: unset;
+	box-sizing: border-box;
+	border-radius: 1em;
+	padding: 0.5em;
+	margin: 0;
+	width: 100%;
+	box-shadow: 0px 0px 5px var(--light-text);
+	transition: all 0.3s;
+}
+input:focus {
+	box-shadow: 0px 0px 5px var(--dark-text);
 }
