--- a/src/global.css
+++ b/src/global.css
@@ -35,13 +35,27 @@ button:hover {
 input {
 	all: unset;
 	box-sizing: border-box;
-	border-radius: 1em;
+	border-radius: 0.4em;
 	padding: 0.5em;
 	margin: 0;
 	width: 100%;
-	box-shadow: 0px 0px 5px var(--light-text);
+	box-shadow: 0px 0px 2px var(--light-text);
 	transition: all 0.3s;
 }
 input:focus {
-	box-shadow: 0px 0px 5px var(--dark-text);
+	box-shadow: 0px 0px 3px var(--dark-text);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+	margin: 0;
+	padding: 0;
+}
+
+a {
+	text-decoration: none;
 }
