scroll and changed to positioning in layout

--- a/src/global.css
+++ b/src/global.css
@@ -76,3 +76,25 @@ a {
 .add:hover {
 	fill: var(--light-text);
 }
+
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	border-radius: 1em;
+	background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555;
+  }
