--- a/src/global.css
+++ b/src/global.css
@@ -98,3 +98,11 @@ a {
   ::-webkit-scrollbar-thumb:hover {
 	background: #555;
   }
+
+  .error-response {
+	color: rgb(175, 56, 56);
+	background-color: rgb(232, 174, 174);
+	padding: 0.2em;
+	margin: 0;
+	border-radius: 0.4em;
+}
