--- a/src/global.css
+++ b/src/global.css
@@ -38,7 +38,7 @@ button:hover {
 	cursor: pointer;
 }
 
-input {
+input, textarea, select{
 	all: unset;
 	box-sizing: border-box;
 	border-radius: 0.4em;
@@ -47,10 +47,12 @@ input {
 	width: 100%;
 	box-shadow: 0px 0px 2px var(--light-text);
 	transition: all 0.3s;
+	
 }
-input:focus {
+input:focus, textarea:focus, select {
 	box-shadow: 0px 0px 3px var(--dark-text);
 }
+  
 
 h1,
 h2,
@@ -69,6 +71,8 @@ a {
 .add {
 	position: absolute;
 	right: 30px;
+	width: fit-content;
+	height: fit-content;
 	bottom: 15%;
 	fill: var(--dark-alt);
 }
@@ -77,6 +81,20 @@ a {
 	fill: var(--light-text);
 }
 
+
+.loader {
+	border: 16px solid var(--light-text);
+	border-top: 16px solid var(--light-secondary); 
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
+	animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
 
 /* width */
 ::-webkit-scrollbar {
@@ -105,4 +123,18 @@ a {
 	padding: 0.2em;
 	margin: 0;
 	border-radius: 0.4em;
+}
+
+
+.modal-button-container{
+	display: flex;
+	flex-direction: row;
+	gap:1em;
+}
+
+.full-screen {
+	display:flex;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
 }
