--- a/src/global.css
+++ b/src/global.css
@@ -138,3 +138,31 @@ a {
 	justify-content: center;
 	align-items: center;
 }
+
+/* Animate  */
+.dot{
+	display: inline-block;
+}
+.dot:nth-child(1) {
+	animation-delay: 0ms;
+	animation: 1s infinite elip ease-in-out;
+}
+.dot:nth-child(2) {
+	animation: 1s infinite elip ease-in-out;
+	animation-delay: 100ms;
+}
+.dot:nth-child(3) {
+	animation: 1s infinite elip ease-in-out;
+	animation-delay: 200ms;
+}
+@keyframes elip {
+	0% {
+		transform: translateY(0px);
+	}
+	50% {
+		transform: translateY(-5px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
