--- a/src/global.css
+++ b/src/global.css
@@ -32,7 +32,11 @@ button {
 	text-align: center;
 	transition: all 0.1s;
 }
-button:hover {
+
+button:disabled{
+	background-color: var(--light-text);
+}
+button:not(:disabled):hover {
 	background-color: var(--light-text);
 	color: var(--dark-text);
 	cursor: pointer;
@@ -49,11 +53,22 @@ select {
 	width: 100%;
 	box-shadow: 0px 0px 2px var(--light-text);
 	transition: all 0.3s;
+	
 }
 input:focus,
 textarea:focus,
 select {
 	box-shadow: 0px 0px 3px var(--dark-text);
+}
+
+select:disabled{
+	color: #8e8e8e;
+
+}
+
+::placeholder{
+	color: #8e8e8e;
+
 }
 
 h1,
